--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-*/__pychache__
-*/.ipynb_checkpoints
-convolutional-neural-networks/cifar-cnn/data
+**/__pychache__
+**/.ipynb_checkpoints
+/convolutional-neural-networks/cifar-cnn/data
