--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-**/__pychache__
-**/.ipynb_checkpoints
-/convolutional-neural-networks/cifar-cnn/data
+__pychache__/
+.ipynb_checkpoints/
+data/
+convolutional-neural-networks/cifar-cnn/cifar10_cnn_solution.ipynb
